@@ -1,3 +1,9 @@
+2007-01-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>
+
+	* cimXmlOps.y, cimXmlParser.c:
+	Fix update for 1635811: qualifier and reference type keybinding
+	processing.
+
 2007-01-17  Sven Schuetz
 	* providerMgr.c:
 	2nd fix for 1636805: ain does not work for indication subscriptions
